--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ let totalPages = 1;
 // Fetch trending movies with page number
 async function fetchTrendingMovies(page = 1) {
 try {
-const response = await fetch(`/api/tmdb?endpoint=trending/movie/week&page=${page}`);
+const response = await fetch(`/api/tmdb?endpoint=trending/movie/week?page=${page}`);
 const data = await response.json();
 
 displayMovies(data.results, 'trending-movies');
